--- a/app/views/homes/about.html.erb
+++ b/app/views/homes/about.html.erb
@@ -1,2 +1,3 @@
-<h1>Homes#about</h1>
-<p>Find me in app/views/homes/about.html.erb</p>
+<div>
+  Welcome to<i class="fa-solid fa-book"></i><strong>Bookers</strong>!
+</div>
