[Update]ページの作成

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,9 +13,9 @@
     <header>
       <% if user_signed_in? %>
         <li><%= link_to "Home", "/homes/top" %></li>
-        <li><%= link_to "Users", "/users/user" %></li>
-        <li><%= link_to "Books", "/books/book" %></li>
-        <li><%= link_to "Log out", destroy_user_session_path, method: :delete %></li>
+        <li><%= link_to "Users", "/users" %></li>
+        <li><%= link_to "Books", "/books" %></li>
+        <li><%= link_to "Log out", '/users/sign_out', method: :delete %></li>
       <% else %>
         <li><%= link_to "Home", "/homes/top" %></li>
         <li><%= link_to "About", "/homes/about" %></li>
@@ -26,8 +26,8 @@
     <main>
       <%= yield %>
     </main>
-    <footer>
-      <p>CopyRight Infratop.inc</p>
+    <footer class="mx-auto">
+      <p style="text-align: center;">CopyRight Infratop.inc</p>
     </footer>
   </body>
 </html>
