--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -1,2 +1,10 @@
-<h1>Books#show</h1>
-<p>Find me in app/views/books/show.html.erb</p>
+<div>
+  <h1>Book detail</h1>
+  <%= image_tag @book.get_image %>
+  <p>Title <%= @book.title %></p>
+  <p>Option <%= @book.body %></p>
+  <% if @book.user == current_user %>
+    <p><%= link_to "Edit", edit_book_path(@book) %></p>
+    <p><%= link_to "Destroy", book_path(@book.id), method: :delete, "data-confirm" => "Really?" %></p>
+  <% end %>
+</div>
