--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,2 +1,13 @@
-<h1>Users#index</h1>
-<p>Find me in app/views/users/index.html.erb</p>
+<h1>Users</h1>
+
+<% @users.each do |user| %>
+
+<p>image</p>
+<%= image_tag(user.profile_image.presence || 'no_image.jpg', size:'100x100') %>
+
+<p>name</p>
+<span><%= user.name %></span>
+
+<p><%= link_to "Show", user_path(user) %></p>
+
+<% end %>
