--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,9 +12,9 @@
   <body>
     <header>
       <% if user_signed_in? %>
-        <li><%= link_to "Home", "/homes/top" %></li>
+        <li><%= link_to "Home", "/home" %></li>
         <li><%= link_to "Users", "/users" %></li>
-        <li><%= link_to "Books", "/books" %></li>
+        <li><%= link_to "Books", user_books_path(current_user) %></li>
         <li><%= link_to "Log out", '/users/sign_out', method: :delete %></li>
       <% else %>
         <li><%= link_to "Home", "/homes/top" %></li>
