--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -1,7 +1,10 @@
+<%= render 'sidebar', book: @book %>
+
 <div>
   <h1>Book detail</h1>
   <%= image_tag @book.get_image %>
-  <p>Title <%= @book.title %></p>
+  <%= link_to @user.name, user_path(@user) %>
+  <p>Title <%= link_to @book.title, @book %></p>
   <p>Option <%= @book.body %></p>
   <% if @book.user == current_user %>
     <p><%= link_to "Edit", edit_book_path(@book) %></p>
