--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,18 +10,24 @@
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
   <body>
-    <header>
-      <% if user_signed_in? %>
-        <li><%= link_to "Home", "/home" %></li>
-        <li><%= link_to "Users", "/users" %></li>
-        <li><%= link_to "Books", user_books_path(current_user) %></li>
-        <li><%= link_to "Log out", '/users/sign_out', method: :delete %></li>
-      <% else %>
-        <li><%= link_to "Home", "/homes/top" %></li>
-        <li><%= link_to "About", "/homes/about" %></li>
-        <li><%= link_to "Sign up", new_user_registration_path %></li>
-        <li><%= link_to "Log in", new_user_session_path %></li>
-      <% end %>
+    <header class="bg-secondary h-100">
+      <div class="container">
+        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+          <ul class="navbar-nav　mr-auto">
+            <% if user_signed_in? %>
+              <li class="nav-item d-inline"><%= link_to "Home", book_path(current_user),class: "nav-link" %></li>
+              <li class="nav-item d-inline"><%= link_to "Users", "/users",class: "nav-link" %></li>
+              <li class="nav-item d-inline"><%= link_to "Books", books_path,class: "nav-link" %></li>
+              <li class="nav-item d-inline"><%= link_to "Log out", '/users/sign_out', method: :delete,class: "nav-link" %></li>
+            <% else %>
+              <li class="nav-item d-inline"><%= link_to "Home", "/homes/top",class: "nav-link" %></li>
+              <li class="nav-item d-inline"><%= link_to "About", "/homes/about",class: "nav-link" %></li>
+              <li class="nav-item d-inline"><%= link_to "Sign up", new_user_registration_path,class: "nav-link" %></li>
+              <li class="nav-item d-inline"><%= link_to "Log in", new_user_session_path,class: "nav-link" %></li>
+            <% end %>
+          </ul>
+        </nav>
+      </div>
     </header>
     <main>
       <%= yield %>
