--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,30 +6,32 @@
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
+    <script src="https://kit.fontawesome.com/e88726f84d.js" crossorigin="anonymous"></script>
     <%= stylesheet_pack_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
   <body>
-    <header class="bg-secondary h-100">
+    <header class="bg-dark h-100">
       <div class="container">
-        <nav class="navbar navbar-expand-lg navbar-light bg-light">
-          <ul class="navbar-nav　mr-auto">
+        <nav class="navbar navbar-expand-lg text-white ">
+          <p>Bookers</p>
+          <ul class="navbar-nav ml-auto flex-row" >
             <% if user_signed_in? %>
-              <li class="nav-item d-inline"><%= link_to "Home", book_path(current_user),class: "nav-link" %></li>
-              <li class="nav-item d-inline"><%= link_to "Users", "/users",class: "nav-link" %></li>
-              <li class="nav-item d-inline"><%= link_to "Books", books_path,class: "nav-link" %></li>
-              <li class="nav-item d-inline"><%= link_to "Log out", '/users/sign_out', method: :delete,class: "nav-link" %></li>
+              <li class="nav-item"><i class="fa-solid fa-house"></i> <%= link_to "Home", user_path(current_user),class:"nav-link text-white" %></li>
+              <li class="nav-item"><%= link_to "Users", "/users",class:"nav-link text-white" %></li>
+              <li class="nav-item"><%= link_to "Books", "/books",class:"nav-link text-white" %></li>
+              <li class="nav-item"><%= link_to "Log out", '/users/sign_out', method: :delete,class:"nav-link text-white" %></li>
             <% else %>
-              <li class="nav-item d-inline"><%= link_to "Home", "/homes/top",class: "nav-link" %></li>
-              <li class="nav-item d-inline"><%= link_to "About", "/homes/about",class: "nav-link" %></li>
-              <li class="nav-item d-inline"><%= link_to "Sign up", new_user_registration_path,class: "nav-link" %></li>
-              <li class="nav-item d-inline"><%= link_to "Log in", new_user_session_path,class: "nav-link" %></li>
+              <li class="nav-item"><i class="fa-solid fa-house"></i> <%= link_to "Home", "/home/top",class:"nav-link text-white" %></li>
+              <li class="nav-item"><i class="fa-solid fa-link"></i> <%= link_to "About", "/home/about",class:"nav-link text-white" %></li>
+              <li class="nav-item"><i class="fa-solid fa-user-plus"></i> <%= link_to "Sign up", new_user_registration_path,class:"nav-link text-white" %></li>
+              <li class="nav-item"><i class="fa-solid fa-right-to-bracket"></i> <%= link_to "Log in", new_user_session_path,class:"nav-link text-white" %></li>
             <% end %>
           </ul>
         </nav>
       </div>
     </header>
-    <main>
+    <main class="container">
       <%= yield %>
     </main>
     <footer class="mx-auto">
