--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -8,6 +8,6 @@
   <p>Option <%= @book.body %></p>
   <% if @book.user == current_user %>
     <p><%= link_to "Edit", edit_book_path(@book) %></p>
-    <p><%= link_to "Destroy", book_path(@book.id), method: :delete, "data-confirm" => "Really?" %></p>
+    <p><%= link_to "Destroy", book_path(@book), method: :delete %></p>
   <% end %>
 </div>
