--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -1,2 +1,13 @@
-<h1>Homes#top</h1>
-<p>Find me in app/views/homes/top.html.erb</p>
+<div>
+  Welcome to<i class="fa-solid fa-book"></i><strong>Bookers</strong>!
+</div>
+
+<p>In<i class="fa-solid fa-book"></i><strong>Bookers</strong>,</p><br>
+
+you can share and exchange your opinions, inpressions, and emotions <br>
+
+about various books!
+
+<%= link_to "Log in", "/users/sign_in" %>
+
+<%= link_to "Sign up", "/users/sign_up" %>
