--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -1,13 +1,15 @@
 <%= render 'sidebar', book: @book %>
 
-<div>
-  <h1>Book detail</h1>
-  <%= image_tag @book.get_image %>
-  <%= link_to @user.name, user_path(@user) %>
-  <p>Title <%= link_to @book.title, @book %></p>
-  <p>Option <%= @book.body %></p>
-  <% if @book.user == current_user %>
-    <p><%= link_to "Edit", edit_book_path(@book) %></p>
-    <p><%= link_to "Destroy", book_path(@book), method: :delete %></p>
-  <% end %>
+<div class="col-md-8 offset-md-1">
+  <div>
+    <h1>Book detail</h1>
+    <%= image_tag @book.get_image %>
+    <%= link_to @user.name, user_path(@user) %>
+    <p>Title <%= link_to @book.title, @book %></p>
+    <p>Option <%= @book.body %></p>
+    <% if @book.user == current_user %>
+      <p><%= link_to "Edit", edit_book_path(@book) %></p>
+      <p><%= link_to "Destroy", book_path(@book), method: :delete %></p>
+    <% end %>
+  </div>
 </div>
