--- a/app/views/books/_sidebar.html.erb
+++ b/app/views/books/_sidebar.html.erb
@@ -1,20 +1,32 @@
-<div>
+<div class="col-md-3">
   <h3>User info</h3>
   <% if @user.present? %>
     <%= image_tag @user.get_profile_image(100,100) %>
-    <p>name</p><%= @user.name %>
-    <p>introduction</p><%= @user.introduction %>
-    <%= link_to "人", edit_user_path(@user) %>
+    <table class="table">
+      <tbody>
+      <tr></tr>
+        <tr>
+          <th>name</th>
+          <th><%= @user.name %></th>
+        </tr>
+        <tr>
+          <th>introduction</th>
+          <th><%= @user.introduction %></th>
+        </tr>
+    </table>
+    <div class="row">
+      <a class="btn btn-outline-secondary btn-block" href=edit_user_path(@user)>
+    </div>
   <% else %>
     <p>No user information available.</p>
   <% end %>
-</div>
 
-<h1>New book</h1>
-<%= form_with model: book do |f| %>
-  <h4>Title</h4>
-  <%= f.text_field :title %>
-  <h4>Option</h4>
-  <%= f.text_field :body %><br>
-  <%= f.submit 'Create Book' %>
-<% end %>
+  <h3>New book</h3>
+  <%= form_with model: book do |f| %>
+    <h4>Title</h4>
+    <%= f.text_field :title %>
+    <h4>Option</h4>
+    <%= f.text_field :body %><br>
+    <%= f.submit 'Create Book' %>
+  <% end %>
+</div>
