--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -1,5 +1,4 @@
 <h1>Editing Book</h1>
-
 <%= form_with model: @book do |f| %>
 
   <p>Title</p>
@@ -9,5 +8,7 @@
   <%= f.text_field :body %>
 
   <%= f.submit 'Update Book' %>
+
+  <%= link_to "Show", book_path %> | <%= link_to "Back", '/books' %>
 
 <% end %>
