--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -1,4 +1,4 @@
-<div>
+<div class=mx-auto col-11 col-sm-10 col-lg-8 col-xl-6>
   Welcome to<i class="fa-solid fa-book"></i><strong>Bookers</strong>!
 </div>
 
