--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,26 +13,39 @@
   <body>
     <header class="bg-dark h-100">
       <div class="container">
-        <nav class="navbar navbar-expand-lg text-white ">
-          <p>Bookers</p>
+        <nav class="navbar navbar-expand-lg navbar-dark bg-dark text-white">
+          <%= link_to "Bookers", "/home/top",class:"nav-link text-white" %>
           <ul class="navbar-nav ml-auto flex-row" >
             <% if user_signed_in? %>
-              <li class="nav-item"><i class="fa-solid fa-house"></i> <%= link_to "Home", user_path(current_user),class:"nav-link text-white" %></li>
-              <li class="nav-item"><%= link_to "Users", "/users",class:"nav-link text-white" %></li>
-              <li class="nav-item"><%= link_to "Books", "/books",class:"nav-link text-white" %></li>
-              <li class="nav-item"><%= link_to "Log out", '/users/sign_out', method: :delete,class:"nav-link text-white" %></li>
+              <li class="nav-item"><%= link_to user_path(current_user),class:"nav-link text-white" do %><i class="fa-solid fa-house"></i> Home <% end %></li>
+              <li class="nav-item"><%= link_to "/users",class:"nav-link text-white" do %><i class="fa-solid fa-users"></i> Users <% end %></li>
+              <li class="nav-item"><%= link_to "/books",class:"nav-link text-white" do %><i class="fa-solid fa-book-open"></i> Books <% end %></li>
+              <li class="nav-item"><%= link_to "/users/sign_out", method: :delete,class:"nav-link text-white" do %><i class="fa-solid fa-right-from-bracket"></i> Log out <% end %></li>
             <% else %>
-              <li class="nav-item"><i class="fa-solid fa-house"></i> <%= link_to "Home", "/home/top",class:"nav-link text-white" %></li>
-              <li class="nav-item"><i class="fa-solid fa-link"></i> <%= link_to "About", "/home/about",class:"nav-link text-white" %></li>
-              <li class="nav-item"><i class="fa-solid fa-user-plus"></i> <%= link_to "Sign up", new_user_registration_path,class:"nav-link text-white" %></li>
-              <li class="nav-item"><i class="fa-solid fa-right-to-bracket"></i> <%= link_to "Log in", new_user_session_path,class:"nav-link text-white" %></li>
+              <li class="nav-item"><%= link_to "/home/top",class:"nav-link text-white" do %><i class="fa-solid fa-house"></i> Home　 <% end %></li>
+              <li class="nav-item"><%= link_to "/home/about",class:"nav-link text-white" do %><i class="fa-solid fa-link"></i> About　 <% end %></li>
+              <li class="nav-item"><%= link_to new_user_registration_path,class:"nav-link text-white" do %><i class="fa-solid fa-user-plus"></i> Sign up　 <% end %></li>
+              <li class="nav-item"><%= link_to new_user_session_path,class:"nav-link text-white" do %><i class="fa-solid fa-right-to-bracket"></i> Log in <% end %></li>
             <% end %>
           </ul>
         </nav>
       </div>
     </header>
     <main class="container">
+      <div class="row">
+        <% flash.each do |message_type, message| %>
+          <div class="flash-message <%= message_type %>"><%= message %></div>
+        <% end %>
+        <% if @book.errors.any? %>
+          <%= @book.errors.count %>errrors prohibited this obj from being saved:
+          <ul>
+            <% @book.errors.full_messages.each do |message| %>
+              <li><%= message %></li>
+            <% end %>
+          </ul>
+        <% end %>
       <%= yield %>
+      </div>
     </main>
     <footer class="mx-auto">
       <p style="text-align: center;">CopyRight Infratop.inc</p>
