--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,15 +1,16 @@
 <%= render '/books/sidebar', book: @book %>
+<div class="col-md-8 offset-md-1">
+  <h1>Users</h1>
 
-<h1>Users</h1>
+  <% @users.each do |user| %>
 
-<% @users.each do |user| %>
+  <p>image</p>
+  <%= image_tag(user.profile_image.presence || 'no_image.jpg', size:'100x100') %>
 
-<p>image</p>
-<%= image_tag(user.profile_image.presence || 'no_image.jpg', size:'100x100') %>
+  <p>name</p>
+  <span><%= user.name %></span>
 
-<p>name</p>
-<span><%= user.name %></span>
+  <p><%= link_to "Show", user_path(user) %></p>
 
-<p><%= link_to "Show", user_path(user) %></p>
-
-<% end %>
+  <% end %>
+</div>
