--- a/app/views/books/_sidebar.html.erb
+++ b/app/views/books/_sidebar.html.erb
@@ -1,5 +1,5 @@
 <div class="col-md-3">
-  <h3>User info</h3>
+  <h2>User info</h2>
   <% if @user.present? %>
     <%= image_tag @user.get_profile_image(100,100) %>
     <table class="table">
@@ -14,14 +14,15 @@
           <th><%= @user.introduction %></th>
         </tr>
     </table>
-    <div class="row">
-      <a class="btn btn-outline-secondary btn-block" href=edit_user_path(@user)>
-    </div>
+
+    <a href=<%= edit_user_path(@user.id) %> class="btn btn-block btn-outline-secondary"><i class="fa-solid fa-user-gear"></i></a>
+
   <% else %>
     <p>No user information available.</p>
   <% end %>
 
-  <h3>New book</h3>
+  <h2 class="mt-3">New book</h2>
+
   <%= form_with model: book do |f| %>
     <h4>Title</h4>
     <%= f.text_field :title %>
