--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -1,14 +1,32 @@
-<h1>Editing Book</h1>
-<%= form_with model: @book do |f| %>
+<div class="container">
+  <div class="row">
+    <div>
+      <% if @book.errors.any? %>
+        <%= @book.errors.count %>errors prohibited this obj from being saved:
+        <ul>
+        <% @book.errors.full_messages.each do |message| %>
+          <li><%= message %></li>
+        <% end %>
+        </ul>
+      <% end %>
+    </div>
+  </div>
+  <div class="row">
+    <div>
+      <h1>Editing Book</h1>
+      <%= form_with model: @book do |f| %>
 
-  <p>Title</p>
-  <%= f.text_field :title %>
+        <p>Title</p>
+        <%= f.text_field :title %>
 
-  <p>Option</p>
-  <%= f.text_field :body %>
+        <p>Option</p>
+        <%= f.text_field :body %></br>
 
-  <%= f.submit 'Update Book' %>
+        <%= f.submit 'Update Book' %></br>
 
-  <%= link_to "Show", book_path %> | <%= link_to "Back", '/books' %>
+        <%= link_to "Show", book_path %> | <%= link_to "Back", '/books' %>
 
-<% end %>
+      <% end %>
+    </div>
+  </div>
+</div>
