--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,12 +1,42 @@
-<%= render 'sidebar', book: @book %>
-
-<div class="col-md-8 offset-md-1">
-  <h1>Books</h1>
-    <% @books.each do |book| %>
-      <p>Title</p>
-      <%= link_to book.title, book_path(book) %>
-
-      <p>Option</p>
-      <span><%= book.body %></span>
+<div class="container">
+  <div class="row">
+    <div>
+      <% if @book.errors.any? %>
+      <%= @book.errors.count %>errors prohibited this obj from being saved:
+      <ul>
+      <% @book.errors.full_messages.each do |message| %>
+        <li><%= message %></li>
+      <% end %>
+      </ul>
     <% end %>
+  </div>
+
+  <div class="row">
+  <div class="col-md-3">
+    <%= render 'sidebar', book: @book %>
+  </div>
+
+  <div class="col-md-8 offset-md-1">
+    <h2>Books</h2>
+      <table class="table">
+        <thead>
+          <tr>
+            <th scope="col"></th>
+            <th scope="col">Title</th>
+            <th scope="col">Option</th>
+          </tr>
+        </thead>
+        <tbody>
+          <% @books.each do |book| %>
+          <tr></tr>
+          <tr>
+            <th><%= image_tag current_user.get_profile_image(100,100) %></th>
+            <th><%= link_to book.title, book_path(book) %></th>
+            <th><%= book.body %></th>
+          </tr>
+          <% end %>
+        </tbody>
+      </table>
+    </div>
+  </div>
 </div>
