--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,7 +1,7 @@
-<h2>Sign up</h2>
-
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
   <%= render "devise/shared/error_messages", resource: resource %>
+
+  <h2>Sign up</h2>
 
   <div class="field">
     <%= f.label :name %><br>
@@ -10,7 +10,7 @@
 
   <div class="field">
     <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true, autocomplete: "email",required: true %>
+    <%= f.email_field :email, autofocus: true %>
   </div>
 
   <div class="field">
@@ -27,8 +27,10 @@
   </div>
 
   <div class="actions">
-    <%= f.submit "Sign up" %>
+    <input type="submit" name="commit" value="Sign up" class="btn btn-sm btn-success" data-disable-with="Sign up">
   </div>
-<% end %>
+
 
 <%= render "devise/shared/links" %>
+
+<% end %>
