--- a/app/views/homes/about.html.erb
+++ b/app/views/homes/about.html.erb
@@ -1,3 +1,3 @@
-<div>
-  Welcome to<i class="fa-solid fa-book"></i><strong>Bookers</strong>!
+<div class=mx-auto col-11 col-sm-10 col-lg-8 col-xl-6>
+  <h1>Welcome to<i class="fa-solid fa-book"></i><strong>Bookers</strong>!</h1>
 </div>
