--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -1,13 +1,14 @@
 <div class=mx-auto col-11 col-sm-10 col-lg-8 col-xl-6>
-  Welcome to<i class="fa-solid fa-book"></i><strong>Bookers</strong>!
+ <h1>Welcome to<i class="fa-solid fa-book"></i><strong>Bookers</strong>!!</h1></br>
+
+  <p>In<i class="fa-solid fa-book"></i><strong>Bookers</strong>,</p><br>
+
+  you can share and exchange your opinions, inpressions, and emotions <br>
+
+  about various books!</br>
+
+  <%= link_to "Log in", "/users/sign_in", class:"btn btn-block btn-info" %>
+
+  <%= link_to "Sign up", "/users/sign_up", class:"btn btn-block btn-success" %>
+
 </div>
-
-<p>In<i class="fa-solid fa-book"></i><strong>Bookers</strong>,</p><br>
-
-you can share and exchange your opinions, inpressions, and emotions <br>
-
-about various books!
-
-<%= link_to "Log in", "/users/sign_in" %>
-
-<%= link_to "Sign up", "/users/sign_up" %>
