--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,10 +1,23 @@
-<h1>User info</h1>
-<%= form_with model: @user do |f| %>
-  <h4>Name</h4>
-  <%= f.text_field :name %>
-  <h4>Image</h4>
-  <%= f.file_field :profile_image, accept: "image/*" %>
-  <h4>Introduction</h4>
-  <%= f.text_field :introduction %><br>
-  <%= f.submit 'Update User' %>
-<% end %>
+<div>
+  <% if @user.errors.any? %>
+    <%= @user.errors.count %>errors prohibited this obj from being saved:
+    <ul>
+    <% @user.errors.full_messages.each do |message| %>
+      <li><%= message %></li>
+    <% end %>
+    </ul>
+  <% end %>
+</div>
+
+<div>
+  <h1>User info</h1>
+  <%= form_with model: @user do |f| %>
+    <h4>Name</h4>
+    <%= f.text_field :name %>
+    <h4>Image</h4>
+    <%= f.file_field :profile_image, accept: "image/*" %>
+    <h4>Introduction</h4>
+    <%= f.text_field :introduction %><br>
+    <%= f.submit 'Update User'%>
+  <% end %>
+</div>
