--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,16 +1,23 @@
 <%= render '/books/sidebar', book: @book %>
 <div class="col-md-8 offset-md-1">
-  <h1>Users</h1>
-
-  <% @users.each do |user| %>
-
-  <p>image</p>
-  <%= image_tag(user.profile_image.presence || 'no_image.jpg', size:'100x100') %>
-
-  <p>name</p>
-  <span><%= user.name %></span>
-
-  <p><%= link_to "Show", user_path(user) %></p>
-
-  <% end %>
+  <h2>Users</h2>
+    <table class="table">
+      <thead>
+        <tr>
+          <th scope="col">image</th>
+          <th scope="col">name</th>
+          <th scope="col"></th>
+        </tr>
+      </thead>
+      <tbody>
+        <% @users.each do |user| %>
+        <tr></tr>
+        <tr>
+          <th><%= image_tag(user.profile_image.presence || 'no_image.jpg', size:'100x100') %></th>
+          <th><%= user.name %></th>
+          <th><%= link_to "Show", user_path(user) %></th>
+        </tr>
+        <% end %>
+      </tbody>
+    </table>
 </div>
