--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,10 +1,23 @@
 <%= render '/books/sidebar', book: @book %>
-<div class="col-md-8 offsetmd-1">
-  <div>
-    <h3>User info</h3>
-    <%= image_tag @user.get_profile_image(100,100) %>
-    <p>name</p><%= @user.name %>
-    <p>introduction</p><%= @user.introduction %>
-    <%= link_to "人", edit_user_path(@user) %>
-  </div>
+<div class="col-md-8 offset-md-1">
+  <h2>Books</h2>
+    <table class="table">
+      <thead>
+        <tr>
+          <th scope="col"></th>
+          <th scope="col">Title</th>
+          <th scope="col">Option</th>
+        </tr>
+      </thead>
+      <tbody>
+        <% @books.each do |book| %>
+        <tr></tr>
+        <tr>
+          <th><%= image_tag current_user.get_profile_image(100,100) %></th>
+          <th><%= link_to book.title, book_path(book) %></th>
+          <th><%= book.body %></th>
+        </tr>
+        <% end %>
+      </tbody>
+    </table>
 </div>
