--- a/app/views/books/user_index.html.erb
+++ b/app/views/books/user_index.html.erb
@@ -1,3 +1,4 @@
+<div class="row mt-3">
 <%= render 'sidebar', book: @book %>
 <div class="col-md-8 offset-md-1">
   <h1>Books</h1>
@@ -8,4 +9,5 @@
       <p>Option</p>
       <span><%= book.body %></span>
     <% end %>
+</div>
 </div>
