--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,9 +12,13 @@
   </head>
   <body>
     <header class="bg-dark h-100">
-      <div class="container">
-        <nav class="navbar navbar-expand-lg navbar-dark bg-dark text-white">
-          <%= link_to "Bookers", "/home/top",class:"nav-link text-white" %>
+      <nav class="navbar navbar-expand-lg navbar-dark bg-dark text-white">
+        <div class="container">
+          <%= link_to "Bookers", "/",class:"nav-link text-white" %>
+          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarNavDropdown">
           <ul class="navbar-nav ml-auto flex-row" >
             <% if user_signed_in? %>
               <li class="nav-item"><%= link_to "/users/#{current_user.id}",class:"nav-link text-white" do %><i class="fa-solid fa-house"></i> Home <% end %></li>
@@ -22,23 +26,22 @@
               <li class="nav-item"><%= link_to "/books",class:"nav-link text-white" do %><i class="fa-solid fa-book-open"></i> Books <% end %></li>
               <li class="nav-item"><%= link_to "/users/sign_out", method: :delete,class:"nav-link text-white" do %><i class="fa-solid fa-right-from-bracket"></i> Log out <% end %></li>
             <% else %>
-              <li class="nav-item"><%= link_to "/home/top",class:"nav-link text-white" do %><i class="fa-solid fa-house"></i> Home　 <% end %></li>
+              <li class="nav-item"><%= link_to "/",class:"nav-link text-white" do %><i class="fa-solid fa-house"></i> Home　 <% end %></li>
               <li class="nav-item"><%= link_to "/home/about",class:"nav-link text-white" do %><i class="fa-solid fa-link"></i> About　 <% end %></li>
               <li class="nav-item"><%= link_to new_user_registration_path,class:"nav-link text-white" do %><i class="fa-solid fa-user-plus"></i> Sign up　 <% end %></li>
               <li class="nav-item"><%= link_to new_user_session_path,class:"nav-link text-white" do %><i class="fa-solid fa-right-to-bracket"></i> Log in <% end %></li>
             <% end %>
           </ul>
-        </nav>
-      </div>
+          </div>
+        </div>
+      </nav>
     </header>
 
     <main class="container">
       <% flash.each do |message_type, message| %>
         <div class="flash-message <%= message_type %>"><%= message %></div>
       <% end %>
-      <div class="row mt-3">
       <%= yield %>
-      </div>
     </main>
     <footer class="mx-auto">
       <p style="text-align: center;">CopyRight Infratop.inc</p>
