--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,12 +1,14 @@
+<div class="row mt-3">
 <%= render '/books/sidebar', book: @book %>
 <div class="col-md-8 offset-md-1">
   <h2>Users</h2>
     <table class="table">
       <thead>
         <tr>
-          <th scope="col">image</th>
-          <th scope="col">name</th>
-          <th scope="col"></th>
+          <th>image</th>
+          <th>name</th>
+          <th></th>
+          <th colspan="3"></th>
         </tr>
       </thead>
       <tbody>
@@ -20,4 +22,5 @@
         <% end %>
       </tbody>
     </table>
+</div>
 </div>
