--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,42 +1,45 @@
-<div class="container">
-  <div class="row">
+<div class="row mt-3">
     <div>
       <% if @book.errors.any? %>
-      <%= @book.errors.count %>errors prohibited this obj from being saved:
-      <ul>
-      <% @book.errors.full_messages.each do |message| %>
-        <li><%= message %></li>
+        <%= @book.errors.count %>errors prohibited this obj from being saved:
+        <ul>
+        <% @book.errors.full_messages.each do |message| %>
+          <li><%= message %></li>
+        <% end %>
+        </ul>
       <% end %>
-      </ul>
-    <% end %>
+    </div>
   </div>
 
-  <div class="row">
-  <div class="col-md-3">
+  <div class="row mt-3">
     <%= render 'sidebar', book: @book %>
-  </div>
 
-  <div class="col-md-8 offset-md-1">
-    <h2>Books</h2>
-      <table class="table">
-        <thead>
-          <tr>
-            <th scope="col"></th>
-            <th scope="col">Title</th>
-            <th scope="col">Option</th>
-          </tr>
-        </thead>
-        <tbody>
-          <% @books.each do |book| %>
-          <tr></tr>
-          <tr>
-            <th><%= image_tag current_user.get_profile_image(100,100) %></th>
-            <th><%= link_to book.title, book_path(book) %></th>
-            <th><%= book.body %></th>
-          </tr>
-          <% end %>
-        </tbody>
-      </table>
+    <div class="col-md-8 offset-md-1">
+      <h2>Books</h2>
+        <table class="table">
+          <thead>
+            <tr>
+              <th></th>
+              <th>Title</th>
+              <th>Option</th>
+              <th colspan="3"></th>
+            </tr>
+          </thead>
+          <tbody>
+            <% @books.each do |book| %>
+            <tr></tr>
+            <tr>
+              <th>
+                <%= link_to user_path(book.user.id) do %>
+                  <%= image_tag book.user.get_profile_image(100,100) %>
+                <% end %>
+              </th>
+              <th><%= link_to book.title, book_path(book) %></th>
+              <th><%= book.body %></th>
+            </tr>
+            <% end %>
+          </tbody>
+        </table>
     </div>
   </div>
 </div>
