--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -1,3 +1,4 @@
+<div class="row mt-3">
 <div class=mx-auto col-11 col-sm-10 col-lg-8 col-xl-6>
  <h1>Welcome to<i class="fa-solid fa-book"></i><strong>Bookers</strong>!!</h1></br>
 
@@ -11,4 +12,5 @@
 
   <%= link_to "Sign up", "/users/sign_up", class:"btn btn-block btn-success" %>
 
+</div>
 </div>
