--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,3 +1,4 @@
+<div class="row mt-3">
 <%= render '/books/sidebar', book: @book %>
 <div class="col-md-8 offset-md-1">
   <h2>Books</h2>
@@ -13,11 +14,16 @@
         <% @books.each do |book| %>
         <tr></tr>
         <tr>
-          <th><%= image_tag current_user.get_profile_image(100,100) %></th>
+          <th>
+            <%= link_to user_path(book.user.id) do %>
+              <%= image_tag book.user.get_profile_image(100,100) %>
+            <% end %>
+          </th>
           <th><%= link_to book.title, book_path(book) %></th>
           <th><%= book.body %></th>
         </tr>
         <% end %>
       </tbody>
     </table>
+</div>
 </div>
