--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -21,7 +21,7 @@
         <p>Option</p>
         <%= f.text_field :body %></br>
 
-        <%= f.submit 'Update Book' %></br>
+        <button type="submit" class="btn btn-success">Update Book</button></br>
 
         <%= link_to "Show", book_path(@book) %> | <%= link_to "Back", '/books' %>
 
