--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -5,36 +5,34 @@
   <div>
     <h1>Book detail</h1>
     <% if @book.user == current_user %>
-    <table class="table">
+    <table class="table table-hover table-inverse">
       <tbody>
-        <tr></tr>
         <tr>
-          <th>
+          <td>
             <%= link_to user_path(@user) do %>
               <%= image_tag @book.get_image %></br>
               <%= @user.name %>
             <% end %>
-          </th>
-          <th><%= link_to @book.title, book_path(@book) %></th>
-          <th><%= @book.body %></th>
-          <th><a class="btn btn-sm btn-success" href=<%= edit_book_path(@book.id) %>>Edit</a></th>
-          <th><a data-confirm="本当に消しますか？" class="btn btn-sm btn-danger" data-method="delete" href=<%= book_path(@book) %>>Destroy</a></th>
+          </td>
+          <td><%= link_to @book.title, book_path(@book) %></td>
+          <td><%= @book.body %></td>
+          <td><a class="btn btn-sm btn-success" href=<%= edit_book_path(@book.id) %>>Edit</a></td>
+          <td><a data-confirm="本当に消しますか？" class="btn btn-sm btn-danger" data-method="delete" href=<%= book_path(@book) %>>Destroy</a></td>
         </tr>
       </tbody>
     </table>
     <% else %>
-    <table class="table">
+    <table class="table table-hover table-inverse">
       <tbody>
-        <tr></tr>
         <tr>
-           <th>
+           <td>
             <%= link_to user_path(@user) do %>
               <%= image_tag @book.get_image %></br>
               <%= @user.name %>
             <% end %>
-          </th>
-          <th><%= link_to @book.title, book_path(@book) %></th>
-          <th><%= @book.body %></th>
+          </td>
+          <td><%= link_to @book.title, book_path(@book) %></td>
+          <td><%= @book.body %></td>
         </tr>
       </tbody>
     </table>
