--- a/app/views/books/_sidebar.html.erb
+++ b/app/views/books/_sidebar.html.erb
@@ -28,6 +28,6 @@
     <%= f.text_field :title %>
     <h4>Option</h4>
     <%= f.text_field :body %><br>
-    <%= f.submit 'Create Book' %>
+    <button type="submit" class="btn btn-success">Create Book</button></br>
   <% end %>
 </div>
