--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -16,26 +16,26 @@
 
     <div class="col-md-8 offset-md-1">
       <h2>Books</h2>
-        <table class="table">
+        <table class="table table-hover table-inverse">
           <thead>
             <tr>
-              <th></th>
-              <th>Title</th>
-              <th>Option</th>
-              <th colspan="3"></th>
+              <td></td>
+              <td>Title</td>
+              <td>Option</td>
+              <td colspan="3"></td>
             </tr>
           </thead>
           <tbody>
             <% @books.each do |book| %>
             <tr></tr>
             <tr>
-              <th>
+              <td>
                 <%= link_to user_path(book.user.id) do %>
                   <%= image_tag book.user.get_profile_image(100,100) %>
                 <% end %>
-              </th>
-              <th><%= link_to book.title, book_path(book) %></th>
-              <th><%= book.body %></th>
+              </td>
+              <td><%= link_to book.title, book_path(book) %></td>
+              <td><%= book.body %></td>
             </tr>
             <% end %>
           </tbody>
