--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -2,22 +2,22 @@
 <%= render '/books/sidebar', book: @book %>
 <div class="col-md-8 offset-md-1">
   <h2>Users</h2>
-    <table class="table">
+    <table class="table table-hover table-inverse">
       <thead>
         <tr>
-          <th>image</th>
-          <th>name</th>
-          <th></th>
-          <th colspan="3"></th>
+          <td>image</td>
+          <td>name</td>
+          <td></td>
+          <td colspan="3"></td>
         </tr>
       </thead>
       <tbody>
         <% @users.each do |user| %>
         <tr></tr>
         <tr>
-          <th><%= image_tag(user.profile_image.presence || 'no_image.jpg', size:'100x100') %></th>
-          <th><%= user.name %></th>
-          <th><%= link_to "Show", user_path(user) %></th>
+          <td><%= image_tag(user.profile_image.presence || 'no_image.jpg', size:'100x100') %></td>
+          <td><%= user.name %></td>
+          <td><%= link_to "Show", user_path(user) %></td>
         </tr>
         <% end %>
       </tbody>
